2008-10-21  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Removed common stuff in order to reduce duplication with
	other Makefiles.

2008-10-21  Cedric Vivier  <cedricv@neonux.com>

	* ReviewLockUsedOnlyForOperationsOnVariables.cs: New.
	Rule to check if a lock section is only used for operations
	that could be better handled by System.Threading.Interlocked class.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Added support for generating the documentation files to
	the build process.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.Concurrency.xml,
	doc/Gendarme.Rules.Concurrency: With the new code in the Makefiles we
	don't need to keep the documentation files in the repository.

2008-10-18  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotLockOnWeakIdentityObjectsRule.cs: Add [FxCopCompatibility]
	attribute. Use new GetOperandRock to simplify the rule.
	* DontUseLockedRegionOutsideMethodRule.cs: Use OpCodeEngine to 
	ignore methods that do not contain call[virt] instructions.
	* DoubleCheckLockingRule.cs: Only apply rule to assemblies targetting
	runtimes before 2.0 (i.e. 1.x) Use OpCodeEngine to ignore methods that 
	do not contain call[virt] instructions. Update and expand the XML 
	documentation.
	* LockAnalyzerRule.cs: Use OpCodeEngine to ignore methods that do 
	not contain call[virt] instructions.
	* NonConstantStaticFieldsShouldNotBeVisibleRule.cs: Ignore 
	delegates.
	* WriteStaticFieldFromInstanceMethodRule.cs: Use OpCodeEngine to
	check for methods that contains Stsfld (store of static fields). Use 
	Resolve rock on fields.

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-10-14  Néstor Salceda  <nestor.salceda@gmail.com>

	* DoNotLockOnThisOrTypesRule.cs: Added XML documentation.

2008-10-14  Néstor Salceda  <nestor.salceda@gmail.com>
