@@ -4,7 +4,8 @@
       <Output directory="../../bin" assembly="Gendarme.Rules.Concurrency" />
       <Build debugmode="True" target="Library" />
       <Execution runwithwarnings="True" consolepause="False" runtime="MsNet" clr-version="Net_2_0" />
-      <CodeGeneration compiler="Mcs" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
+      <EnvironmentVariables />
+      <CodeGeneration compiler="Mcs" warninglevel="4" nowarn="1591" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" generatexmldocumentation="True" ctype="CSharpCompilerParameters" />
     </Configuration>
     <Configuration name="Release" ctype="DotNetProjectConfiguration">
       <Output directory="bin/Release" assembly="Gendarme.Rules.Concurrency" />
@@ -21,6 +22,8 @@
     <File name="DoNotLockOnThisOrTypesRule.cs" subtype="Code" buildaction="Compile" />
     <File name="DoNotLockOnWeakIdentityObjectsRule.cs" subtype="Code" buildaction="Compile" />
     <File name="LockAnalyzerRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="DoNotUseMethodImplOptionsSynchronizedRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="ReviewLockUsedOnlyForOperationsOnVariablesRule.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="framework" />
