@@ -1,3 +1,11 @@
+2008-10-23  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DoNotUseMethodImplOptionsSynchronizedRule.cs: New. Rule to warn 
+	about method decorated with [MethodImpl(MethodImplOptions.Synchronized)]
+	since the runtime lock is similar to a lock(this) or lock(typeof(X))
+	* Gendarme.Rules.Concurrency.mdp: Updated MD project file.
+	* Makefile.am: Added the new rule to the build.
+
 2008-10-21  Néstor Salceda  <nestor.salceda@gmail.com>
 
 	* Makefile.am: Removed common stuff in order to reduce duplication with
